added random population generator and graphed it's output TODO: make the chart update based on the input text fields changing.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,14 @@
     <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
+    <form>
+        population:<br>
+        <input type="text" name="population" value="1000000"><br>
+        number of groups:<br>
+        <input type="text" name="groups" value="1000">
+    </form>
     <div id="chart"></div>
+
     <script src="js/flotr2.min.js"></script>
     <script src="js/chart.js"></script>
 </body>
